clean + update swagger
