# dbmongo/docs/swagger/swagger.yaml
@@ -271,24 +271,6 @@ paths:
       summary: créer le batch suivant
       tags:
         - Administration
-  /api/admin/batch/revert:
-    get:
-      description: |-
-        Ce traitement permet de supprime les données et la référence du dernier batch et de le réouvrir pour une nouvelle intégration.  
-        Cela est utile si des modifications sont à apporter au niveau du batch.
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: string
-              example: "ok"
-      security:
-        - BearerAuth: []
-      summary: supprimer le dernier batch
-      tags:
-        - Administration
   /api/admin/events:
     get:
       description: |-
